logs/Slang/generic/member/class_member_test_46.sv.log
name: class_member_test_46
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:7:1: error: language feature not yet supported
class constructible;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:8:16: error: expected identifier
extern function new(string name, int count);
               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:8:17: error: expected member
extern function new(string name, int count);
                ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:8:33: error: expected identifier
extern function new(string name, int count);
                                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:8:34: error: expected declarator
extern function new(string name, int count);
                                 ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:8:37: error: expected ','
extern function new(string name, int count);
                                    ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_46.sv:8:43: error: expected declarator
extern function new(string name, int count);
                                          ^
